# baller

./: CMakeLists.txt  IO.h  README.md  baller.hpp  definitions.hpp  index.html  main.js  optimization.hpp  render.cc  simple.txt  simple_scene.cc
scripts/: write_colormap.py
